Started playing with style

--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -1,7 +1,6 @@
 .footer-container {
   display: flex;
-  color: #5995DA;
-  background-color: #D6E9FE;
+  color: #24305e;
   justify-content: space-around;
   height: 80px;
   align-items: center;
