--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -1,6 +1,5 @@
 .header-container {
-    color: #5995DA;
-    background-color: #D6E9FE;
+    color: #24305e;
     display: flex;
     justify-content: space-around;
     height: 100px;
@@ -9,7 +8,7 @@
 
 a:link,
 a:visited {
-    color: #5D6063;
+    color: #24305e;
     text-decoration: none;
 }
 
