--- a/frontend/src/components/players/Players.css
+++ b/frontend/src/components/players/Players.css
@@ -1,6 +1,10 @@
 .players-container {
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.players-message {
+  display: flex;
   justify-content: center;
-  align-items: center;
-  flex:2;
 }
